--- a/flow_matching/matching.ipynb
+++ b/flow_matching/matching.ipynb
@@ -209,7 +209,7 @@
     "ax.set_ylim(-PARAMS[\"target_scale\"]*1.5, PARAMS[\"target_scale\"]*1.5)\n",
     "ax.set_xlabel('Time')\n",
     "ax.set_title('SDE Vector Field Trajectory')\n",
-    "#ax.legend()\n",
+    "ax.legend()\n",
     "ax.grid(True)\n",
     "\n",
     "plt.show()"
@@ -231,7 +231,7 @@
     "ax.set_ylim(-PARAMS[\"target_scale\"]*1.5, PARAMS[\"target_scale\"]*1.5)\n",
     "ax.set_xlabel('Time')\n",
     "ax.set_title('SDE Vector Field Trajectory')\n",
-    "#ax.legend()\n",
+    "ax.legend()\n",
     "ax.grid(True)\n",
     "\n",
     "plt.close() # Close the plot to prevent it from showing as a static image\n",
